<resources>
    <string name="app_name">HeadStart</string>
    <string name="organisation_email">Organisation Email Address</string>
    <string name="add_password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_button">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="or">OR</string>
    <string name="organization_name">Organization Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_btn">Register</string>
    <string name="organisation_phone_number">Organisation Phone Number</string>
    <string name="already_a_user_login">Already a User? Login</string>
    <string name="phone_tracker">As Tracker</string>
    <string name="admin_dashboard">As Admin</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset</string>
    <string name="home_menu">Home</string>
    <string name="trucks_menu">Trucks</string>
    <string name="map_menu">Map</string>
    <string name="drivers_menu">Drivers</string>
    <string name="settings_menu">Settings</string>
    <string name="home_nav">Home</string>
    <string name="maintenance_nav">Maintain</string>
    <string name="enter_search">search for ?</string>
    <string name="map_nav">Map</string>
    <string name="drivers_nav">Drivers</string>
    <string name="settings_nav">Settings</string>
    <string name="track">Track</string>
    <string name="notification">notify</string>
    <string name="active_trucks">Active Trucks…</string>
    <string name="float_bar_add_driver_page">This sends user to add driver page</string>
    <string name="submit_driver_details_to_list">Float bar to add driver to list</string>
    <string name="map_activity_fab_icon">Map Activity Fab icon</string>
    <string name="fetching_data">Data Loading.....</string>
    <string name="my_settings">Settings</string>
    <string name="profile_image">profile Image</string>
    <string name="night">Night</string>
    <string name="light">Light</string>
</resources>