<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home_nav"
        android:icon="@drawable/ic_home"
    />

    <item
        android:id="@+id/nav_trucks"
        android:title="@string/truck_nav"
        android:icon="@drawable/ic_car"
        />

    <item
        android:id="@+id/nav_map"
        android:title="@string/map_nav"
        android:icon="@drawable/ic_map"
        />

    <item
        android:id="@+id/nav_drivers"
        android:title="@string/drivers_nav"
        android:icon="@drawable/ic_drivers"
        />

    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings_nav"
        android:icon="@drawable/ic_settings"
        />
</menu>