<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:itemTextAppearance="@style/Style_TextView">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home_nav"
        android:icon="@drawable/ic_action_home"
    />

    <item
        android:id="@+id/nav_trucks"
        android:title="@string/truck_nav"
        android:icon="@drawable/ic_action_truck"
        />

    <item
        android:id="@+id/nav_map"
        android:title="@string/map_nav"
        />

    <item
        android:id="@+id/nav_drivers"
        android:title="@string/drivers_nav"
        android:icon="@drawable/ic_action_drivers"
        />

    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings_nav"
        android:icon="@drawable/ic_action_settings"
        />
</menu>