<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#1E1D20"
    tools:context=".TruckOwnerLoginForm">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logIn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="78dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="81dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="54sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/logIn"
        android:layout_width="147dp"
        android:layout_height="36dp"
        android:layout_above="@+id/loginButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="193dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="318dp"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="monospace"
            android:hint="@string/organisation_email"
            android:cursorVisible="true"
            android:textCursorDrawable="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHighlight="#ffff" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginButton"
        android:layout_marginBottom="44dp"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="monospace"
            android:hint="@string/add_password"
            android:cursorVisible="true"
            android:textCursorDrawable="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHighlight="#ffff" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_above="@+id/forgetPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="22dp"
        android:background="@color/white"
        android:padding="10dp"
        android:text="@string/login_button"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="137dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="monospace"
        android:text="@string/forget_password"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="30dp"
        android:layout_height="29dp"
        android:layout_above="@+id/registerUser"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="195dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="monospace"
        android:text="@string/or"
        android:textColor="@android:color/background_light"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/registerUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="173dp"
        android:layout_marginEnd="171dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="monospace"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="184dp"
        android:layout_marginTop="226dp"
        android:layout_marginEnd="179dp"
        android:layout_marginBottom="457dp"
        android:visibility="gone" />


</RelativeLayout>