<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewBackground"
    tools:context=".TruckOwnerRegisterForm">


    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="77dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="54sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="147dp"
        android:layout_height="36dp"
        android:layout_above="@+id/registerButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="133dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="366dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/registerButton"
        app:hintEnabled="false"
        android:layout_marginBottom="279dp" >

        <EditText
            android:id="@+id/organizationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_organization"
            android:drawablePadding="10dp"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="monospace"
            android:hint="@string/organization_name"
            android:textColorHint="@color/black"
            android:cursorVisible="true"
            android:textCursorDrawable="@color/black"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHighlight="#ffff" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="346dp"
        android:textColorHint="@color/black">

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="monospace"
            android:hint="@string/organisation_email"
            android:cursorVisible="true"
            android:textCursorDrawable="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHighlight="#ffff" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="282dp"
        app:hintEnabled="false" >

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="monospace"
            android:hint="@string/organisation_phone_number"
            android:maxLength="14"
            android:cursorVisible="true"
            android:textCursorDrawable="@color/black"
            android:textColorHint="@color/black"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHighlight="#ffff" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="215dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="monospace"
            android:hint="@string/add_password"
            android:cursorVisible="true"
            android:textCursorDrawable="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHighlight="#ffff" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/registerButton"
        android:layout_marginTop="-15dp"
        android:layout_marginBottom="12dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/passwordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="monospace"
            android:hint="@string/confirm_password"
            android:cursorVisible="true"
            android:textCursorDrawable="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHighlight="#ffff" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_above="@+id/loginUser"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="19dp"
        android:background="@color/white"
        android:padding="10dp"
        android:text="@string/register_btn"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/loginUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="monospace"
        android:padding="10dp"
        android:text="@string/already_a_user_login"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="181dp"
        android:layout_marginTop="186dp"
        android:layout_marginEnd="182dp"
        android:layout_marginBottom="497dp"
        android:visibility="gone" />

</RelativeLayout>