<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/appBackground"
    tools:context=".PhoneTracker.Tracker">


    <!-- Application Name/Logo-->
    <TextView
        android:id="@+id/appName"
        style="@style/viewParent.headerText"
        android:layout_gravity="center"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- Login TextView-->
    <TextView
        android:id="@+id/signUp"
        style="@style/viewParent.headerText"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed"
        android:text="Track with Headstart"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Email EditText view for Login-->
    <EditText
        android:id="@+id/driverTrackID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_border"
        android:drawablePadding="10dp"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="monospace"
        android:hint="Enter id"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textCursorDrawable="@android:color/black"
        android:textSize="@dimen/textFormat" />

    <!-- TextInput Layout for Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/emailAddress"
        app:layout_constraintTop_toTopOf="@+id/loginButton"
        app:passwordToggleEnabled="true">

        <!-- Password TextView for logIn -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="monospace"
            android:hint="@string/add_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textCursorDrawable="@android:color/black"
            android:textSize="@dimen/textFormat" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- LogIn Btn-->
    <Button
        android:id="@+id/trackerSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:text="SignUp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- Forget Password TextView-->
    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="monospace"
        android:text="@string/forget_password"
        android:textAlignment="center"
        android:textColor="@color/accent_100"
        android:textSize="14sp"
        android:textStyle="bold" />


</LinearLayout>